<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSilver"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">


        <ImageView
            android:id="@+id/app_bg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/atas_back" />



        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="william kurniawan"
            android:textSize="22sp"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kampus"
            android:textSize="17sp"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Malang,Indonesia"
            android:drawableStart="@drawable/ic_edit_location_pink_24dp"
            android:textSize="17sp"
            android:textColor="#FFFFF1"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text2"/>


        <ImageView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_settings_black_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_menu_black_24dp"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="158dp"
            android:layout_marginTop="147dp"
            android:layout_marginEnd="157dp"
            android:src="@drawable/profile"
            app:civ_border_color="#FFF"
            app:civ_border_width="15dp" />

        <LinearLayout
            android:id="@+id/rlStatistik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:id="@+id/rlLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/Appr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="500"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Appr"
                    android:layout_centerHorizontal="true"
                    android:text="@string/follow"
                     android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlCenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/followers"
                    android:text="551"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/followers"
                    android:text="@string/label_followers"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/followerss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="30"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/followerss"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_posting"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlBottom"
            android:layout_width="match_parent"
            android:layout_height="356dp"
            android:layout_below="@id/rlStatistik"
            android:layout_marginTop="7dp"
            android:background="@drawable/nature">

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/about"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                />

            <TextView
                android:id="@+id/textAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAbout"
                android:layout_margin="16dp"
                android:text="@string/lorem_ipsum"
                android:textSize="14sp"
                android:textColor="@color/colorText"
                />

            <Button
                android:id="@+id/btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAbout"
                android:layout_centerHorizontal="true"
                android:layout_margin="79dp"
                android:background="@drawable/button"
                android:text="@string/follow"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>